--- a/src/components/Contact/contact.scss
+++ b/src/components/Contact/contact.scss
@@ -19,17 +19,9 @@
     }
 
     .content-width {
-      max-width: 850px;
+      max-width: 800px;
       width: 100%;
       margin-left: auto;
-
-      @include xx-large {
-        max-width: 800px;
-      }
-
-      @include x-large {
-        max-width: 770px;
-      }
 
       @include large {
         max-width: 100%;
