--- a/src/components/Portfolio/portfolio.scss
+++ b/src/components/Portfolio/portfolio.scss
@@ -15,22 +15,13 @@
     }
 
     .content-width {
-      max-width: 850px;
+      max-width: 800px;
       width: 100%;
       margin-left: auto;
-
-      @include xx-large {
-        max-width: 800px;
-      }
-
-      @include x-large {
-        max-width: 770px;
-      }
 
       @include large {
         max-width: 100%;
       }
-
       .portfolio-me {
         position: relative;
         margin-bottom: 20px;
@@ -79,6 +70,14 @@
         line-height: normal;
         text-transform: uppercase;
         margin-bottom: 20px;
+
+        @include mobile {
+          font-size: 39px;
+        }
+
+        @include sm-mobile {
+          font-size: 30px;
+        }
       }
 
       .portfolio-category {
