--- a/src/components/Resume/resume.scss
+++ b/src/components/Resume/resume.scss
@@ -14,17 +14,9 @@
     }
 
     .content-width {
-      max-width: 850px;
+      max-width: 800px;
       width: 100%;
       margin-left: auto;
-
-      @include xx-large {
-        max-width: 800px;
-      }
-
-      @include x-large {
-        max-width: 770px;
-      }
 
       @include large {
         max-width: 100%;
@@ -92,6 +84,13 @@
           line-height: normal;
           text-transform: uppercase;
           margin-bottom: 30px;
+          @include mobile {
+            font-size: 39px;
+          }
+
+          @include sm-mobile {
+            font-size: 30px;
+          }
         }
 
         .timeline {
@@ -217,6 +216,14 @@
               font-weight: 700;
               line-height: normal;
               text-transform: uppercase;
+
+              @include mobile {
+                font-size: 39px;
+              }
+
+              @include sm-mobile {
+                font-size: 35px;
+              }
             }
           }
 
