--- a/src/components/sidebar/sidebar.scss
+++ b/src/components/sidebar/sidebar.scss
@@ -7,6 +7,7 @@
   transform: translateX(100%);
   bottom: 0;
   width: 350px;
+  overflow: hidden;
   z-index: 2;
   color: #fff;
   background: linear-gradient(180deg, rgb(71 71 71 / 34%) 0%, #00000000 100%);
